# dotfiles

./: .aider.conf.yml  .aider.model.settings.yml  .env.aider  .git_bash_aliases  .gitconfig  .gitignore  .stow-local-ignore  .vimrc  .zsh_aliases  .zshrc  CLAUDE.md  brew-packages.txt  readme.md  terminal_setup.sh
.claude/: CLAUDE.md  settings.json
.claude/agents/: architect-reviewer.md  cloud-architect.md  code-reviewer.md  platform-engineer.md  terraform-specialist.md
.claude/backup/: CLAUDE.md
.claude/backup/.claude/: settings.json  settings.reference.txt
.claude/backup/.claude/hooks/: improve-prompt.py
.claude/backup/.claude/skills/: skill-rules.json
.claude/backup/.claude/skills/databricks-platform-operations/: SKILL.md
.claude/backup/.claude/skills/jemena-shared-vpc-navigator/: SKILL.md
.claude/commands/: capture.md  commit-and-push.md  context-prime.md  morning-sync.md  mr.md
.claude/example_claude_project_memories/: refactoring_databricks_hive_notebooks_project_global_claude.md  refactoring_databricks_notebook_guide_claude.md
.claude/skills/cloud-cost-optimization/: SKILL.md
.claude/skills/code-review-excellence/: SKILL.md
.claude/skills/secrets-management/: SKILL.md
.claude/skills/skill-codex/: README.md  SKILL.md
.claude/skills/skill-creator/scripts/: quick_validate.py
.claude/skills/skill-developer/: SKILL.md
.claude/skills/sql-optimization-patterns/: SKILL.md
.codex/: auth.json  config.toml  history.jsonl  version.json
.codex/sessions/2025/10/07/: rollout-2025-10-07T23-04-51-0199be8f-628b-7ce0-9c63-2ff77f954868.jsonl
.codex/sessions/2025/10/09/: rollout-2025-10-09T23-06-01-0199c8dd-2901-76a2-97d8-41968836e2c9.jsonl
.codex/sessions/2025/10/10/: rollout-2025-10-10T10-38-21-0199cb57-03d3-78a0-92fb-617ff5bacca3.jsonl
.codex/sessions/2025/10/11/: rollout-2025-10-11T02-20-46-0199ceb5-d0ec-7351-911c-ac828a45f4d9.jsonl  rollout-2025-10-11T06-39-45-0199cfa2-ed69-7cb1-83e3-f87eb5dbf2af.jsonl  rollout-2025-10-11T20-57-28-0199d2b4-2ffb-7333-9ae8-46659cab2565.jsonl  rollout-2025-10-11T22-05-30-0199d2f2-7bcf-7771-b777-cdb912fc46ff.jsonl  rollout-2025-10-11T22-18-37-0199d2fe-7cee-7971-8553-998e4caa5228.jsonl  rollout-2025-10-11T22-26-34-0199d305-c446-7102-b241-a8794c514d33.jsonl  rollout-2025-10-11T22-27-14-0199d306-6075-7f90-a795-18de0106eaf1.jsonl  rollout-2025-10-11T22-29-38-0199d308-93bb-79c2-93ab-d89b123b8dee.jsonl  rollout-2025-10-11T22-59-35-0199d323-fcf0-7af1-b7f0-22a119b9f714.jsonl
.codex/sessions/2025/10/12/: rollout-2025-10-12T21-01-58-0199d7de-ab73-71a0-83e7-69fba6ddfb91.jsonl  rollout-2025-10-12T21-13-40-0199d7e9-608c-78b3-ad15-6cf251ee6cad.jsonl
.codex/sessions/2025/10/17/: rollout-2025-10-17T14-59-40-0199f052-c43c-72e0-b869-0789d98e8afb.jsonl
.codex/sessions/2025/10/21/: rollout-2025-10-21T00-28-41-019a01ce-ccd8-76e1-8b12-3dec146374cc.jsonl
.codex/sessions/2025/10/27/: rollout-2025-10-27T12-48-41-019a235a-71c1-72f0-9481-737ccaf411c9.jsonl
.codex/sessions/2025/10/30/: rollout-2025-10-30T16-52-02-019a33ac-516f-7652-b1e4-5aeb051e4f00.jsonl
.codex/sessions/2025/10/31/: rollout-2025-10-31T08-53-35-019a371c-a5ff-7c91-bffc-6f868b967c11.jsonl
.config/ccstatusline/: settings.json
.config/ghostty/: config  favorites
.config/iterm2/: AppSupport
.config/nvim/: README.md  init.lua  lazy-lock.json
.config/nvim.backup/lua/config/: lazy.lua
.config/nvim.backup/lua/plugins/: colorscheme.lua
.config/nvim.bak/lua/will/core/: init.lua  (+1 more)
.config/nvim/lua/config/: lazy.lua  options.lua
.config/nvim/lua/will/: lazy.lua
.config/opencode/: opencode.json
.config/opencode/agent/: cloud-architect.md  code-architect.md  code-explorer.md  code-reviewer.md  doc-explanation.md  doc-howto.md  doc-reference.md  doc-troubleshooting.md  terraform-specialist.md
.config/opencode/command/: code-review.md  commit.md  feature-dev.md
.roo/: .roomodes
.roo/roo-databricks-refactoring-expert/: common_commands.md  data_source_validation_protocol.md  databricks_job_runner.sh  databricks_job_runner_script_plan.md  enhanced_refactoring_workflow.md  post_refactoring_validation_workflow.md  refactor_save_to_volumes_instruction.md  target_table_cloning.md
.roo/roo-db-recon-expert/: catalog_paths.md  dbsqlcli_commands.md  general_instructions.md  sql_templates.md
.vim/autoload/: plug.vim
aider_config/: CONVENTIONS.md  NewKnowledgeBase.md  guide.md  refactoring_table_references.md
custom_scripts/python/archive/voice_assistant/: CLAUDE.md  main.py  pyproject.toml  requirements.txt
custom_scripts/python/archive/voice_assistant/reference/: helper.py  main.py  python_multithreading_interview_transcript.md
custom_scripts/python/archive/voice_assistant/reference/output/: 001e4.yml  10e81.yml  b8beb.yml  d9762.yml
custom_scripts/python/archive/voice_assistant/tests/: FINAL_TEST_STATUS.md  __init__.py  test_basic.py
custom_scripts/python/archive/voice_assistant/todo/: voice_assistant_enhancement_prd.md
custom_scripts/python/scribe/: #roadmap.md  #todo.md  README.md  pyproject.toml  setup_scribe.sh
custom_scripts/python/scribe/docs/: mapping_of_contents.md
custom_scripts/python/scribe/scribe/: __main__.py  config.py  file_utils.py  main.py  templates.py
custom_scripts/python/stress-detector/: README.md  requirements.txt  stress_monitor.py
custom_scripts/python/voice_assistant/: .gitignore  CLAUDE.md  INSTALL.md  PRODUCTION_TEST_ANALYSIS.md  README_STT.md  helper.py  main.py  pyproject.toml  requirements-minimal.txt  test.py
custom_scripts/python/voice_assistant/reference/: main.py
custom_scripts/python/voice_assistant/reference/output/: 001e4.yml
custom_scripts/python/voice_assistant/tests/: conftest.py  test_logging.py  test_stt_integration.py  test_voice_transcriber.py
custom_scripts/python/voice_assistant/todo/: voice_assistant_enhancement_prd.md
custom_scripts/python/voice_assistant_gemini/: main.py  main_test.py
move_docs/: grasping_networking.md  how-to-validate-data-with-pydantic.md  learning_networking.md  practical_examples.md
move_docs/docs/: asyncio-mastery-guide.md  networking-fundamentals-quiz.md
(+43 files in other folders)
